added 3 image slider place holders within a wrapper element.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Full Screen Image Slider</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <div class="wrapper">
+        <div id="left-arrow" class="arrow"></div>
 
+        <div id="slider">
+            <div class="slide slide1">
+                <div class="slide-content">
+                    <span>Yoga Image 1</span>
+                </div>
+            </div>
+            <div class="slide slide2">
+                <div class="slide-content">
+                    <span>Yoga Image 2</span>
+                </div>
+            </div>
+            <div class="slide slide3">
+                <div class="slide-content">
+                    <span>Yoga Image 3</span>
+                </div>
+            </div>
+        </div>
+
+        <div id="right-arrow" class="arrow"></div>
+    </div>
+
+
+    <script src=" script.js "></script>
 </body>
 
 </html>
