--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
                     <span>Yoga Image 3</span>
                 </div>
             </div>
+            <div class="slide slide4">
+                <div class="slide-content">
+                    <span>Yoga Image 3</span>
+                </div>
+            </div>
         </div>
+
 
         <div id="right-arrow" class="arrow"></div>
     </div>
