added the reset function to clear out all images before every slide move

--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
         <div id="slider">
             <div class="slide slide1">
                 <div class="slide-content">
-                    <span>Yoga Image 1</span>
+                    <span>Yoga</span>
                 </div>
             </div>
             <div class="slide slide2">
                 <div class="slide-content">
-                    <span>Yoga Image 2</span>
+                    <span>Warrior</span>
                 </div>
             </div>
             <div class="slide slide3">
                 <div class="slide-content">
-                    <span>Yoga Image 3</span>
+                    <span>Pose</span>
                 </div>
             </div>
             <div class="slide slide4">
                 <div class="slide-content">
-                    <span>Yoga Image 3</span>
+                    <span>Namaste</span>
                 </div>
             </div>
         </div>
@@ -41,7 +41,7 @@
     </div>
 
 
-    <script src=" script.js "></script>
+    <script src="script.js "></script>
 </body>
 
 </html>
