added the startSlide(), slideLeft(), slideRight() functions and event listeners for right and left arrow clicks and initiated startSlide()

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="wrapper">
-        <div id="left-arrow" class="arrow"></div>
+        <div id="arrow-left" class="arrow"></div>
 
         <div id="slider">
             <div class="slide slide1">
@@ -37,7 +37,7 @@
         </div>
 
 
-        <div id="right-arrow" class="arrow"></div>
+        <div id="arrow-right" class="arrow"></div>
     </div>
 
 
